--- a/app/src/main/res/layout/charge_panel.xml
+++ b/app/src/main/res/layout/charge_panel.xml
@@ -19,14 +19,14 @@
             android:textSize="25sp"
             android:textStyle="bold"/>
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_gravity="center"
             android:layout_marginTop="5dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
                 android:text="今日个数："
                 android:textSize="16sp"/>
             <TextView
@@ -42,14 +42,14 @@
                 android:textSize="16sp"/>
         </LinearLayout>
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_gravity="center"
             android:layout_marginTop="5dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
                 android:text="今日收入："
                 android:textSize="16sp"/>
             <TextView
@@ -65,14 +65,14 @@
                 android:textSize="16sp"/>
         </LinearLayout>
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_gravity="center"
             android:layout_marginTop="5dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
                 android:text="本月收入："
                 android:textSize="16sp"/>
             <TextView
@@ -88,14 +88,14 @@
                 android:textSize="16sp"/>
         </LinearLayout>
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_gravity="center"
             android:layout_marginTop="5dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
                 android:text="今年收入："
                 android:textSize="16sp"/>
             <TextView
@@ -158,7 +158,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:gravity="center_vertical"
@@ -167,12 +167,11 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
                         android:text="流程卡号："
                         android:textSize="16sp"/>
                     <EditText
                         android:id="@+id/add_record_process_num"
-                        android:layout_width="180dp"
+                        android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:maxLength="15"
                         android:hint="请输入流程卡号"
@@ -180,7 +179,7 @@
                         android:inputType="numberSigned"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:gravity="center_vertical"
@@ -189,7 +188,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
+                        
                         android:text="产品型号："
                         android:textSize="16sp"/>
                     <Spinner
@@ -199,7 +198,7 @@
                         android:textSize="16sp"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:gravity="center_vertical"
@@ -208,12 +207,12 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
+                        
                         android:text="型号单价："
                         android:textSize="16sp"/>
                     <EditText
                         android:id="@+id/add_record_model_price"
-                        android:layout_width="180dp"
+                        android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:inputType="numberDecimal"
                         android:hint="请输入型号单价"
@@ -221,7 +220,7 @@
                         android:textSize="16sp"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:gravity="center_vertical"
@@ -230,12 +229,11 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
                         android:text="合格个数："
                         android:textSize="16sp"/>
                     <EditText
                         android:id="@+id/add_record_qulified_num"
-                        android:layout_width="180dp"
+                        android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:maxLength="3"
                         android:hint="请输入合格个数"
@@ -243,7 +241,7 @@
                         android:inputType="numberSigned"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:gravity="center_vertical"
@@ -252,19 +250,18 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
                         android:text="添加日期："
                         android:textSize="16sp"/>
                     <TextView
                         android:id="@+id/add_record_add_date"
-                        android:layout_width="180dp"
+                        android:layout_width="197dp"
                         android:layout_marginLeft="3dp"
                         android:layout_height="wrap_content"
                         android:textColor="#3db0ed"
                         android:textSize="16sp"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:gravity="center_vertical"
@@ -273,12 +270,11 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
                         android:text="备         注："
                         android:textSize="16sp"/>
                     <EditText
                         android:id="@+id/add_record_comment"
-                        android:layout_width="180dp"
+                        android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:maxLength="40"
                         android:hint="选填"
@@ -291,7 +287,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:gravity="center_vertical"
@@ -300,12 +296,11 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
-                        android:text="姓         名：  "
+                        android:text="姓          名："
                         android:textSize="16sp"/>
                     <EditText
                         android:id="@+id/add_attendance_name"
-                        android:layout_width="180dp"
+                        android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:maxLength="10"
                         android:hint="请输入姓名"
@@ -313,7 +308,7 @@
                         android:inputType="text"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:gravity="center_vertical"
@@ -322,12 +317,11 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
                         android:text="时长/小时："
                         android:textSize="16sp"/>
                     <EditText
                         android:id="@+id/add_attendance_hours"
-                        android:layout_width="180dp"
+                        android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:inputType="numberDecimal"
                         android:hint="请输入时长"
@@ -335,7 +329,7 @@
                         android:textSize="16sp"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:gravity="center_vertical"
@@ -344,12 +338,11 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
-                        android:text="考勤类型： "
+                        android:text=" 考勤类型： "
                         android:textSize="16sp"/>
                     <RadioGroup
                         android:id="@+id/add_attendance_type"
-                        android:layout_width="180dp"
+                        android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
                         <RadioButton
@@ -366,7 +359,7 @@
                     </RadioGroup>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:gravity="center_vertical"
@@ -375,19 +368,18 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
-                        android:text="添加日期： "
+                        android:text=" 添加日期： "
                         android:textSize="16sp"/>
                     <TextView
                         android:id="@+id/add_attendance_add_date"
-                        android:layout_width="180dp"
+                        android:layout_width="197dp"
                         android:layout_marginLeft="3dp"
                         android:layout_height="wrap_content"
                         android:textColor="#3db0ed"
                         android:textSize="16sp"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:gravity="center_vertical"
@@ -396,12 +388,11 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
-                        android:text="备         注：  "
+                        android:text="备          注："
                         android:textSize="16sp"/>
                     <EditText
                         android:id="@+id/add_attendance_comment"
-                        android:layout_width="180dp"
+                        android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:maxLength="40"
                         android:hint="选填"
