--- a/app/src/main/res/layout/history_panel.xml
+++ b/app/src/main/res/layout/history_panel.xml
@@ -19,10 +19,11 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
+                android:id="@+id/history_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="查询条件"
+                android:text="历史数据"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 android:layout_marginLeft="10dp"/>
@@ -35,7 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
-                android:text="筛  选"
+                android:text="查 询"
                 android:layout_gravity="bottom"
                 android:gravity="right"
                 android:textSize="16sp"
