--- a/app/src/main/res/layout/charge_panel.xml
+++ b/app/src/main/res/layout/charge_panel.xml
@@ -176,7 +176,7 @@
                         android:maxLength="15"
                         android:hint="请输入流程卡号"
                         android:textSize="16sp"
-                        android:inputType="numberSigned"/>
+                        android:inputType="text"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
